--- a/index.html
+++ b/index.html
@@ -32,12 +32,97 @@
             <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M253.3 35.1c6.1-11.8 1.5-26.3-10.2-32.4s-26.3-1.5-32.4 10.2L117.6 192 32 192c-17.7 0-32 14.3-32 32s14.3 32 32 32L83.9 463.5C91 492 116.6 512 146 512L430 512c29.4 0 55-20 62.1-48.5L544 256c17.7 0 32-14.3 32-32s-14.3-32-32-32l-85.6 0L365.3 12.9C359.2 1.2 344.7-3.4 332.9 2.7s-16.3 20.6-10.2 32.4L404.3 192l-232.6 0L253.3 35.1zM192 304l0 96c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-96c0-8.8 7.2-16 16-16s16 7.2 16 16zm96-16c8.8 0 16 7.2 16 16l0 96c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-96c0-8.8 7.2-16 16-16zm128 16l0 96c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-96c0-8.8 7.2-16 16-16s16 7.2 16 16z"/></svg></a></li>
         </ul>
     </nav>
-    <aside>
-
-    </aside>
 
     <main>
+        <!-- Carousel -->
+        <section id="carousel">    
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./media/images/bread.png" class="d-block w-100" alt="fix this !">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Bakery & Pasty products</h5>
+                    <p>Most kinds of bread, and a lot of delicious pastry sweets.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./media/images/dairy.png" class="d-block w-100" alt="fix this !">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Dairy</h5>
+                    <p>Fresh milk and irresistible cheese, from Ricotta to Parmigiano</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./media/images/fruits.jpg" class="d-block w-100" alt="fix this !">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Fruits</h5>
+                    <p>tutti frutti !</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./media/images/meat.jpg" class="d-block w-100" alt="fix this !">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Charcuterie</h5>
+                    <p>Halal meat from trusted and certified Islamic slaughterhouses</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./media/images/vegetables.jpg" class="d-block w-100" alt="fix this !">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>vegetables</h5>
+                    <p>Keep it healthy 😉</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
 
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+        </section>
+
+        <section id="partners">
+
+            <div class="bubbles-group">
+                <div class="bubbles">
+                    <img src="./media/images/icons/el mazraa.jpeg">
+                    <p>المزرعة</p>
+                </div>
+                <div class="bubbles">
+                    <img src="./media/images/icons/rose blanche.jpeg">
+                    <p>الوردة البيضاء</p>
+                </div>
+                <div class="bubbles">
+                    <img src="./media/images/icons/jadida.png">
+                    <p>جديدة</p>
+                </div>
+                <div class="bubbles">
+                    <img src="./media/images/icons/sticap.png">
+                    <p>Sticap</p>
+                </div>
+                <div class="bubbles">
+                    <img src="./media/images/icons/saïda.jpeg">
+                    <p>سيدة</p>
+                </div>
+        
+            </div>
+        </section>
     </main>
 
 
