--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             <li class="dropdown-list"><a href="" title="See what we can supply 🧺">Shopping</a>
                 <form>
                     <ul class="dropdown-content">
-                        <li><a href="./links/vegetables.html" target="_blank" title="">Vegetables</a></li>
-                        <li><a href="./links/fruits.html" target="_blank" title="">Fruits</a></li>
-                        <li><a href="./links/dairy.html" target="_blank" title="">Dairy</a></li>
-                        <li><a href="./links/meat.html" target="_blank" title="">Meat</a></li</li>
-                        <li><a href="./links/baking.html" target="_blank" title="">Baking & Pastry</a></li>
-                        <li><a href="./links/drinks.html" target="_blank" title="">Drinks</a></li>
+                        <li><a href="./links/vegetables.html" target="_blank" title="">🥬 Vegetables</a></li>
+                        <li><a href="./links/fruits.html" target="_blank" title="">🍉 Fruits</a></li>
+                        <li><a href="./links/dairy.html" target="_blank" title="">🥛 Dairy</a></li>
+                        <li><a href="./links/meat.html" target="_blank" title="">🥩 Meat</a></li</li>
+                        <li><a href="./links/baking.html" target="_blank" title="">🥖 Baking & Pastry</a></li>
+                        <li><a href="./links/drinks.html" target="_blank" title="">🧋 Drinks</a></li>
+                        <li><a href="./links/misc.html" target="_blank" title="">🧻 Cleaning & Hygene</a></li>
+                        <li><a href="./links/misc.html" target="_blank" title="">🪥 Body Care</a></li>
                         <li><a href="./links/misc.html" target="_blank" title="">Miscellaneous</a></li>
                     </ul>
                 </form>
@@ -34,10 +36,11 @@
         </ul>
 
         <ul class="navBar-icons">
-            <li id="search"><a title="Search" href=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg></a>
-                <form>
+            <li class="search-container">
+                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+                <form class="search-bar">
                     <input type="text" name="item" placeholder="Looking for something ?">
-                    <input type="submit" value="Fetch">
+                    <input id="button" type="submit" value="Fetch">
                 </form>
             </li>
             <li><a title="Users" href="./links/user.html" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg></a></li>
@@ -47,7 +50,7 @@
     </nav>
 
     <main>
-        <!-- Carousel -->
+<!-- Carousel -->
         <section id="carousel">    
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
