--- a/links/meat.html
+++ b/links/meat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./media/images/icons/website icon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -13,10 +13,11 @@
 
 <body>
     <nav>
-        <img src="./media/images/icons/website icon.jpg" alt="fix this !">
+        <a href="../index.html" title="Serving you gladly 😊"><img src="../media/icons/website icon.jpg" alt="fix this !"></a>
         
         <ul id="sub-navbar-1">
             <li><a href="./links/discounts.html">Discounts</a></li>
+            <li><a href="./links/best-sellers.html">Best Sellers</a></li>
             <li class="dropdown-list"><a href="" title="See what we can supply 🧺">Shopping</a>
                 <form>
                     <ul class="dropdown-content">
@@ -49,10 +50,45 @@
         </ul>
     </nav>
 
+    <main>
+
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ut deleniti corrupti voluptatum aspernatur, molestias doloremque molestiae consectetur, iste ab dolores consequatur itaque eaque excepturi mollitia provident minima at magnam.</p>
+        </section>
+
+        <section>
+            <button class="minus">-</button>
+            <input class="counter" type="text" value="0">
+            <button class="plus" onclick="increment()">+</button>
+            <script src="../main.js">
+                // var counter=document.getElementsByClassName("counter");
+                // var plus=document.getElementsByClassName("plus");
+                // var minus=document.getElementsByClassName("minus");
+
+
+                // // adding on clicking
+                // // plus.addEventListener("click",function() {counter.value++})
+                // function increment() {
+                //     counter.value++
+                // }
+
+                // // removing on clicking
+                // minus.addEventListener("click",function() {
+                //     if(counter.value > 0)
+                //         counter.value--})
+            </script>
+        </section>
+
+    </main>
+
 
 
 </body>
 
 <footer>
+
 </footer>
-</html>   
+</html>
