fixing nav-bar shortcut

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
     <nav>
-        <img src="./media/images/icons/website icon.jpg" alt="fix this !">
+        <a href="./index.html" title="Serving you gladly 😊"><img src="./media/icons/website icon.jpg" alt="fix this !"></a>
         
         <ul id="sub-navbar-1">
             <li><a href="./links/discounts.html">Discounts</a></li>
+            <li><a href="./links/best-sellers.html">Best Sellers</a></li>
             <li class="dropdown-list"><a href="" title="See what we can supply 🧺">Shopping</a>
                 <form>
                     <ul class="dropdown-content">
@@ -26,8 +27,8 @@
                         <li><a href="./links/meat.html" target="_blank" title="">🥩 Meat</a></li</li>
                         <li><a href="./links/baking.html" target="_blank" title="">🥖 Baking & Pastry</a></li>
                         <li><a href="./links/drinks.html" target="_blank" title="">🧋 Drinks</a></li>
-                        <li><a href="./links/misc.html" target="_blank" title="">🧻 Cleaning & Hygene</a></li>
-                        <li><a href="./links/misc.html" target="_blank" title="">🪥 Body Care</a></li>
+                        <li><a href="./links/cleaning.html" target="_blank" title="">🧻 Cleaning & Hygene</a></li>
+                        <li><a href="./links/body care.html" target="_blank" title="">🪥 Body Care</a></li>
                         <li><a href="./links/misc.html" target="_blank" title="">Miscellaneous</a></li>
                     </ul>
                 </form>
