--- a/links/body care.html
+++ b/links/body care.html
@@ -55,9 +55,9 @@
 
         <section class="products">
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/cuisse-poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://images.ctfassets.net/7tfi3razjgvb/55V7pM9XACMb7AUHFqUmP8/90a3d5dbd695f0be7e109d4cee21a0bc/Gillette-Fusion5-Power-Men___s-Razor-sp_2x.png" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken thigh</h5>
+                    <h5 class="card-title">Shaving Razors</h5>
                     <p class="card-text">15 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
@@ -66,9 +66,9 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/blanc de poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://cdn.quicksell.co/-MPmaXxg1LJjKrZSqo-h/products/-O-GG6ZMD1iaaDoTbSsO.jpg" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken breast</h5>
+                    <h5 class="card-title">Deodorant</h5>
                     <p class="card-text">16 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
@@ -77,9 +77,9 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://courses.monoprix.tn/lac/134525-home_default/shampooing-anti-pelliculaire.jpg" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken</h5>
+                    <h5 class="card-title">Shampoo</h5>
                     <p class="card-text">25 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
