--- a/links/cleaning.html
+++ b/links/cleaning.html
@@ -55,9 +55,9 @@
 
         <section class="products">
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/cuisse-poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://izy.tn/monipec/2023/12/JAVEL_JUDY_5_L_6d662039c8-300x300.webp" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken thigh</h5>
+                    <h5 class="card-title">Bleach</h5>
                     <p class="card-text">15 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
@@ -66,9 +66,9 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/blanc de poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://lh5.googleusercontent.com/proxy/vovTeE-Tl_SIYftPMUfWFINwS7b26i4Xt1QkVOocWIhUxj7HzWl2LYifQ6rPTwDkcPFQbyih0XnAHUCkGwo5nm4Ky058BguB8mc" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken breast</h5>
+                    <h5 class="card-title">Tissue Paper</h5>
                     <p class="card-text">16 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
@@ -77,9 +77,20 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="../media/images/poultry/poulet.jpg" class="card-img-top" alt="fix this error!">
+                <img src="https://fuller.com/cdn/shop/products/A3078_808_3000x2999.jpg?v=1625609969" class="card-img-top" alt="fix this error!">
                 <div class="card-body">
-                    <h5 class="card-title">chicken</h5>
+                    <h5 class="card-title">Broom</h5>
+                    <p class="card-text">25 $</p>
+                    <a href="#" class="btn">...</a>
+                    <a href="#" class="btn">🔎</a>
+                    <a href="#" class="btn">🧺</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="https://m.media-amazon.com/images/I/61lRZu-f21L._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="fix this error!">
+                <div class="card-body">
+                    <h5 class="card-title">Cleaning Gloves</h5>
                     <p class="card-text">25 $</p>
                     <a href="#" class="btn">...</a>
                     <a href="#" class="btn">🔎</a>
@@ -92,23 +103,7 @@
             <button class="minus">-</button>
             <input class="counter" type="text" value="0">
             <button class="plus" onclick="increment()">+</button>
-            <script src="../main.js">
-                // var counter=document.getElementsByClassName("counter");
-                // var plus=document.getElementsByClassName("plus");
-                // var minus=document.getElementsByClassName("minus");
-
-
-                // // adding on clicking
-                // // plus.addEventListener("click",function() {counter.value++})
-                // function increment() {
-                //     counter.value++
-                // }
-
-                // // removing on clicking
-                // minus.addEventListener("click",function() {
-                //     if(counter.value > 0)
-                //         counter.value--})
-            </script>
+            <script src="../main.js"></script>
         </section>
 
     </main>
