fixing Carousel jamming problem

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="./index.html" title="Serving you gladly 😊"><img src="./media/website icon.jpg" alt="fix this !"></a>
         
         <ul id="sub-navbar-1">
-            <li><a href="./links/discounts.html">Discounts</a></li>
-            <li><a href="./links/best-sellers.html">Best Sellers</a></li>
+            <li><a href="./links/discounts.html" target="_blank">Discounts</a></li>
+            <li><a href="./links/best-sellers.html" target="_blank">Best Sellers</a></li>
             <li class="dropdown-list"><a href="" title="See what we can supply 🧺">Shopping</a>
                 <form>
                     <ul class="dropdown-content">
@@ -38,8 +38,9 @@
         </ul>
 
         <ul class="navBar-icons">
+            
             <li class="search-container">
-                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="20"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
                 <form class="search-bar">
                     <input type="text" name="item" placeholder="Looking for something ?">
                     <input id="button" type="submit" value="Fetch">
@@ -59,6 +60,8 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
